
[TestNoRedundantTypeConstituentsRule/invalid-0 - 1]
Diagnostic 1: overrides (1:10 - 1:15)
Message: 'any' overrides all other types in this union type.
   1 | type T = number | any;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number | any;
     |          ^^^^^^ Redundant type: `number`
  Label: Overriding type: `any` (1:19 - 1:21)
   1 | type T = number | any;
     |                   ^^^ Overriding type: `any`
---

[TestNoRedundantTypeConstituentsRule/invalid-1 - 1]
Diagnostic 1: overrides (3:18 - 3:18)
Message: 'any' overrides all other types in this union type.
   2 |         type B = number;
   3 |         type T = B | any;
     |                  ~
   4 |       
  Label: Redundant type: `number` (3:18 - 3:18)
   2 |         type B = number;
   3 |         type T = B | any;
     |                  ^ Redundant type: `number`
   4 |       
  Label: Overriding type: `any` (3:22 - 3:24)
   2 |         type B = number;
   3 |         type T = B | any;
     |                      ^^^ Overriding type: `any`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-2 - 1]
Diagnostic 1: overrides (1:16 - 1:21)
Message: 'any' overrides all other types in this union type.
   1 | type T = any | number;
     |                ~~~~~~
  Label: Redundant type: `number` (1:16 - 1:21)
   1 | type T = any | number;
     |                ^^^^^^ Redundant type: `number`
  Label: Overriding type: `any` (1:10 - 1:12)
   1 | type T = any | number;
     |          ^^^ Overriding type: `any`
---

[TestNoRedundantTypeConstituentsRule/invalid-3 - 1]
Diagnostic 1: overrides (3:22 - 3:27)
Message: 'any' overrides all other types in this union type.
   2 |         type B = any;
   3 |         type T = B | number;
     |                      ~~~~~~
   4 |       
  Label: Redundant type: `number` (3:22 - 3:27)
   2 |         type B = any;
   3 |         type T = B | number;
     |                      ^^^^^^ Redundant type: `number`
   4 |       
  Label: Overriding type: `any` (3:18 - 3:18)
   2 |         type B = any;
   3 |         type T = B | number;
     |                  ^ Overriding type: `any`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-4 - 1]
Diagnostic 1: overridden (1:19 - 1:23)
Message: 'never' is overridden by other types in this union type.
   1 | type T = number | never;
     |                   ~~~~~
  Label: Redundant type: `never` (1:19 - 1:23)
   1 | type T = number | never;
     |                   ^^^^^ Redundant type: `never`
  Label: Overriding type: `number` (1:10 - 1:15)
   1 | type T = number | never;
     |          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-5 - 1]
Diagnostic 1: overridden (3:22 - 3:26)
Message: 'never' is overridden by other types in this union type.
   2 |         type B = number;
   3 |         type T = B | never;
     |                      ~~~~~
   4 |       
  Label: Redundant type: `never` (3:22 - 3:26)
   2 |         type B = number;
   3 |         type T = B | never;
     |                      ^^^^^ Redundant type: `never`
   4 |       
  Label: Overriding type: `number` (3:18 - 3:18)
   2 |         type B = number;
   3 |         type T = B | never;
     |                  ^ Overriding type: `number`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-6 - 1]
Diagnostic 1: overridden (3:18 - 3:18)
Message: 'never' is overridden by other types in this union type.
   2 |         type B = never;
   3 |         type T = B | number;
     |                  ~
   4 |       
  Label: Redundant type: `never` (3:18 - 3:18)
   2 |         type B = never;
   3 |         type T = B | number;
     |                  ^ Redundant type: `never`
   4 |       
  Label: Overriding type: `number` (3:22 - 3:27)
   2 |         type B = never;
   3 |         type T = B | number;
     |                      ^^^^^^ Overriding type: `number`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-7 - 1]
Diagnostic 1: overridden (1:10 - 1:14)
Message: 'never' is overridden by other types in this union type.
   1 | type T = never | number;
     |          ~~~~~
  Label: Redundant type: `never` (1:10 - 1:14)
   1 | type T = never | number;
     |          ^^^^^ Redundant type: `never`
  Label: Overriding type: `number` (1:18 - 1:23)
   1 | type T = never | number;
     |                  ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-8 - 1]
Diagnostic 1: overrides (1:10 - 1:15)
Message: 'unknown' overrides all other types in this union type.
   1 | type T = number | unknown;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number | unknown;
     |          ^^^^^^ Redundant type: `number`
  Label: Overriding type: `unknown` (1:19 - 1:25)
   1 | type T = number | unknown;
     |                   ^^^^^^^ Overriding type: `unknown`
---

[TestNoRedundantTypeConstituentsRule/invalid-9 - 1]
Diagnostic 1: overrides (1:20 - 1:25)
Message: 'unknown' overrides all other types in this union type.
   1 | type T = unknown | number;
     |                    ~~~~~~
  Label: Redundant type: `number` (1:20 - 1:25)
   1 | type T = unknown | number;
     |                    ^^^^^^ Redundant type: `number`
  Label: Overriding type: `unknown` (1:10 - 1:16)
   1 | type T = unknown | number;
     |          ^^^^^^^ Overriding type: `unknown`
---

[TestNoRedundantTypeConstituentsRule/invalid-10 - 1]
Diagnostic 1: errorTypeOverrides (1:30 - 1:30)
Message: 'NotKnown' is an 'error' type that acts as 'any' and overrides all other types in this union type.
   1 | type ErrorTypes = NotKnown | 0;
     |                              ~
  Label: Redundant type: `0` (1:30 - 1:30)
   1 | type ErrorTypes = NotKnown | 0;
     |                              ^ Redundant type: `0`
  Label: Overriding type: `NotKnown` (1:19 - 1:26)
   1 | type ErrorTypes = NotKnown | 0;
     |                   ^^^^^^^^ Overriding type: `NotKnown`
---

[TestNoRedundantTypeConstituentsRule/invalid-11 - 1]
Diagnostic 1: literalOverridden (1:19 - 1:19)
Message: 0 is overridden by number in this union type.
   1 | type T = number | 0;
     |                   ~
  Label: Redundant type: `0` (1:19 - 1:19)
   1 | type T = number | 0;
     |                   ^ Redundant type: `0`
  Label: Overriding type: `number` (1:10 - 1:15)
   1 | type T = number | 0;
     |          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-12 - 1]
Diagnostic 1: literalOverridden (1:19 - 1:25)
Message: 0 | 1 is overridden by number in this union type.
   1 | type T = number | (0 | 1);
     |                   ~~~~~~~
  Label: Redundant type: `0` (1:20 - 1:20)
   1 | type T = number | (0 | 1);
     |                    ^ Redundant type: `0`
  Label: Redundant type: `1` (1:24 - 1:24)
   1 | type T = number | (0 | 1);
     |                        ^ Redundant type: `1`
  Label: Overriding type: `number` (1:10 - 1:15)
   1 | type T = number | (0 | 1);
     |          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-13 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:16)
Message: 0 | 0 is overridden by number in this union type.
   1 | type T = (0 | 0) | number;
     |          ~~~~~~~
  Label: Redundant type: `0` (1:11 - 1:11)
   1 | type T = (0 | 0) | number;
     |           ^ Redundant type: `0`
  Label: Redundant type: `0` (1:15 - 1:15)
   1 | type T = (0 | 0) | number;
     |               ^ Redundant type: `0`
  Label: Overriding type: `number` (1:20 - 1:25)
   1 | type T = (0 | 0) | number;
     |                    ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-14 - 1]
Diagnostic 1: literalOverridden (3:18 - 3:24)
Message: 2 | 0 | 1 is overridden by number in this union type.
   2 |         type B = 0 | 1;
   3 |         type T = (2 | B) | number;
     |                  ~~~~~~~
   4 |       
  Label: Redundant type: `2` (3:19 - 3:19)
   2 |         type B = 0 | 1;
   3 |         type T = (2 | B) | number;
     |                   ^ Redundant type: `2`
   4 |       
  Label: Redundant type: `0` (3:23 - 3:23)
   2 |         type B = 0 | 1;
   3 |         type T = (2 | B) | number;
     |                       ^ Redundant type: `0`
   4 |       
  Label: Redundant type: `1` (3:23 - 3:23)
   2 |         type B = 0 | 1;
   3 |         type T = (2 | B) | number;
     |                       ^ Redundant type: `1`
   4 |       
  Label: Overriding type: `number` (3:28 - 3:33)
   2 |         type B = 0 | 1;
   3 |         type T = (2 | B) | number;
     |                            ^^^^^^ Overriding type: `number`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-15 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:22)
Message: 0 | 1 | 2 is overridden by number in this union type.
   1 | type T = (0 | (1 | 2)) | number;
     |          ~~~~~~~~~~~~~
  Label: Redundant type: `0` (1:11 - 1:11)
   1 | type T = (0 | (1 | 2)) | number;
     |           ^ Redundant type: `0`
  Label: Redundant type: `1` (1:16 - 1:16)
   1 | type T = (0 | (1 | 2)) | number;
     |                ^ Redundant type: `1`
  Label: Redundant type: `2` (1:20 - 1:20)
   1 | type T = (0 | (1 | 2)) | number;
     |                    ^ Redundant type: `2`
  Label: Overriding type: `number` (1:26 - 1:31)
   1 | type T = (0 | (1 | 2)) | number;
     |                          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-16 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:16)
Message: 0 | 1 is overridden by number in this union type.
   1 | type T = (0 | 1) | number;
     |          ~~~~~~~
  Label: Redundant type: `0` (1:11 - 1:11)
   1 | type T = (0 | 1) | number;
     |           ^ Redundant type: `0`
  Label: Redundant type: `1` (1:15 - 1:15)
   1 | type T = (0 | 1) | number;
     |               ^ Redundant type: `1`
  Label: Overriding type: `number` (1:20 - 1:25)
   1 | type T = (0 | 1) | number;
     |                    ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-17 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:22)
Message: 0 | 0 | 1 is overridden by number in this union type.
   1 | type T = (0 | (0 | 1)) | number;
     |          ~~~~~~~~~~~~~
  Label: Redundant type: `0` (1:11 - 1:11)
   1 | type T = (0 | (0 | 1)) | number;
     |           ^ Redundant type: `0`
  Label: Redundant type: `0` (1:16 - 1:16)
   1 | type T = (0 | (0 | 1)) | number;
     |                ^ Redundant type: `0`
  Label: Redundant type: `1` (1:20 - 1:20)
   1 | type T = (0 | (0 | 1)) | number;
     |                    ^ Redundant type: `1`
  Label: Overriding type: `number` (1:26 - 1:31)
   1 | type T = (0 | (0 | 1)) | number;
     |                          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-18 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:26)
Message: 2 | 3 is overridden by number in this union type.
   1 | type T = (2 | 'other' | 3) | number;
     |          ~~~~~~~~~~~~~~~~~
  Label: Redundant type: `2` (1:11 - 1:11)
   1 | type T = (2 | 'other' | 3) | number;
     |           ^ Redundant type: `2`
  Label: Redundant type: `3` (1:25 - 1:25)
   1 | type T = (2 | 'other' | 3) | number;
     |                         ^ Redundant type: `3`
  Label: Overriding type: `number` (1:30 - 1:35)
   1 | type T = (2 | 'other' | 3) | number;
     |                              ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-19 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:11)
Message:  is overridden by string in this union type.
   1 | type T = '' | string;
     |          ~~
  Label: Redundant type: `""` (1:10 - 1:11)
   1 | type T = '' | string;
     |          ^^ Redundant type: `""`
  Label: Overriding type: `string` (1:15 - 1:20)
   1 | type T = '' | string;
     |               ^^^^^^ Overriding type: `string`
---

[TestNoRedundantTypeConstituentsRule/invalid-20 - 1]
Diagnostic 1: literalOverridden (3:18 - 3:18)
Message: "\"b\"" is overridden by string in this union type.
   2 |         type B = 'b';
   3 |         type T = B | string;
     |                  ~
   4 |       
  Label: Redundant type: `"b"` (3:18 - 3:18)
   2 |         type B = 'b';
   3 |         type T = B | string;
     |                  ^ Redundant type: `"b"`
   4 |       
  Label: Overriding type: `string` (3:22 - 3:27)
   2 |         type B = 'b';
   3 |         type T = B | string;
     |                      ^^^^^^ Overriding type: `string`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-21 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:22)
Message: `a${number}c` is overridden by string in this union type.
   1 | type T = `a${number}c` | string;
     |          ~~~~~~~~~~~~~
  Label: Redundant type: ``a${number}c`` (1:10 - 1:22)
   1 | type T = `a${number}c` | string;
     |          ^^^^^^^^^^^^^ Redundant type: ``a${number}c``
  Label: Overriding type: `string` (1:26 - 1:31)
   1 | type T = `a${number}c` | string;
     |                          ^^^^^^ Overriding type: `string`
---

[TestNoRedundantTypeConstituentsRule/invalid-22 - 1]
Diagnostic 1: literalOverridden (3:18 - 3:18)
Message: `a${number}c` is overridden by string in this union type.
   2 |         type B = `a${number}c`;
   3 |         type T = B | string;
     |                  ~
   4 |       
  Label: Redundant type: ``a${number}c`` (3:18 - 3:18)
   2 |         type B = `a${number}c`;
   3 |         type T = B | string;
     |                  ^ Redundant type: ``a${number}c``
   4 |       
  Label: Overriding type: `string` (3:22 - 3:27)
   2 |         type B = `a${number}c`;
   3 |         type T = B | string;
     |                      ^^^^^^ Overriding type: `string`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-23 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:20)
Message: `${number}` is overridden by string in this union type.
   1 | type T = `${number}` | string;
     |          ~~~~~~~~~~~
  Label: Redundant type: ``${number}`` (1:10 - 1:20)
   1 | type T = `${number}` | string;
     |          ^^^^^^^^^^^ Redundant type: ``${number}``
  Label: Overriding type: `string` (1:24 - 1:29)
   1 | type T = `${number}` | string;
     |                        ^^^^^^ Overriding type: `string`
---

[TestNoRedundantTypeConstituentsRule/invalid-24 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:11)
Message: 0n is overridden by bigint in this union type.
   1 | type T = 0n | bigint;
     |          ~~
  Label: Redundant type: `0n` (1:10 - 1:11)
   1 | type T = 0n | bigint;
     |          ^^ Redundant type: `0n`
  Label: Overriding type: `bigint` (1:15 - 1:20)
   1 | type T = 0n | bigint;
     |               ^^^^^^ Overriding type: `bigint`
---

[TestNoRedundantTypeConstituentsRule/invalid-25 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:12)
Message: -1n is overridden by bigint in this union type.
   1 | type T = -1n | bigint;
     |          ~~~
  Label: Redundant type: `-1n` (1:10 - 1:12)
   1 | type T = -1n | bigint;
     |          ^^^ Redundant type: `-1n`
  Label: Overriding type: `bigint` (1:16 - 1:21)
   1 | type T = -1n | bigint;
     |                ^^^^^^ Overriding type: `bigint`
---

[TestNoRedundantTypeConstituentsRule/invalid-26 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:19)
Message: -1n | 1n is overridden by bigint in this union type.
   1 | type T = (-1n | 1n) | bigint;
     |          ~~~~~~~~~~
  Label: Redundant type: `-1n` (1:11 - 1:13)
   1 | type T = (-1n | 1n) | bigint;
     |           ^^^ Redundant type: `-1n`
  Label: Redundant type: `1n` (1:17 - 1:18)
   1 | type T = (-1n | 1n) | bigint;
     |                 ^^ Redundant type: `1n`
  Label: Overriding type: `bigint` (1:23 - 1:28)
   1 | type T = (-1n | 1n) | bigint;
     |                       ^^^^^^ Overriding type: `bigint`
---

[TestNoRedundantTypeConstituentsRule/invalid-27 - 1]
Diagnostic 1: literalOverridden (3:22 - 3:26)
Message: literal type is overridden by boolean in this union type.
   2 |         type B = boolean;
   3 |         type T = B | false;
     |                      ~~~~~
   4 |       
  Label: Redundant type: `false` (3:22 - 3:26)
   2 |         type B = boolean;
   3 |         type T = B | false;
     |                      ^^^^^ Redundant type: `false`
   4 |       
  Label: Overriding type: `boolean` (3:18 - 3:18)
   2 |         type B = boolean;
   3 |         type T = B | false;
     |                  ^ Overriding type: `boolean`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-28 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:14)
Message: literal type is overridden by boolean in this union type.
   1 | type T = false | boolean;
     |          ~~~~~
  Label: Redundant type: `false` (1:10 - 1:14)
   1 | type T = false | boolean;
     |          ^^^^^ Redundant type: `false`
  Label: Overriding type: `boolean` (1:18 - 1:24)
   1 | type T = false | boolean;
     |                  ^^^^^^^ Overriding type: `boolean`
---

[TestNoRedundantTypeConstituentsRule/invalid-29 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:13)
Message: literal type is overridden by boolean in this union type.
   1 | type T = true | boolean;
     |          ~~~~
  Label: Redundant type: `true` (1:10 - 1:13)
   1 | type T = true | boolean;
     |          ^^^^ Redundant type: `true`
  Label: Overriding type: `boolean` (1:17 - 1:23)
   1 | type T = true | boolean;
     |                 ^^^^^^^ Overriding type: `boolean`
---

[TestNoRedundantTypeConstituentsRule/invalid-30 - 1]
Diagnostic 1: primitiveOverridden (1:18 - 1:24)
Message: boolean is overridden by the literal type in this intersection type.
   1 | type T = false & boolean;
     |                  ~~~~~~~
  Label: Redundant type: `boolean` (1:18 - 1:24)
   1 | type T = false & boolean;
     |                  ^^^^^^^ Redundant type: `boolean`
  Label: Overriding type: `false` (1:10 - 1:14)
   1 | type T = false & boolean;
     |          ^^^^^ Overriding type: `false`
---

[TestNoRedundantTypeConstituentsRule/invalid-31 - 1]
Diagnostic 1: primitiveOverridden (3:22 - 3:28)
Message: boolean is overridden by the false in this intersection type.
   2 |         type B = false;
   3 |         type T = B & boolean;
     |                      ~~~~~~~
   4 |       
  Label: Redundant type: `boolean` (3:22 - 3:28)
   2 |         type B = false;
   3 |         type T = B & boolean;
     |                      ^^^^^^^ Redundant type: `boolean`
   4 |       
  Label: Overriding type: `false` (3:18 - 3:18)
   2 |         type B = false;
   3 |         type T = B & boolean;
     |                  ^ Overriding type: `false`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-32 - 1]
Diagnostic 1: primitiveOverridden (3:22 - 3:28)
Message: boolean is overridden by the true in this intersection type.
   2 |         type B = true;
   3 |         type T = B & boolean;
     |                      ~~~~~~~
   4 |       
  Label: Redundant type: `boolean` (3:22 - 3:28)
   2 |         type B = true;
   3 |         type T = B & boolean;
     |                      ^^^^^^^ Redundant type: `boolean`
   4 |       
  Label: Overriding type: `true` (3:18 - 3:18)
   2 |         type B = true;
   3 |         type T = B & boolean;
     |                  ^ Overriding type: `true`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-33 - 1]
Diagnostic 1: primitiveOverridden (1:17 - 1:23)
Message: boolean is overridden by the literal type in this intersection type.
   1 | type T = true & boolean;
     |                 ~~~~~~~
  Label: Redundant type: `boolean` (1:17 - 1:23)
   1 | type T = true & boolean;
     |                 ^^^^^^^ Redundant type: `boolean`
  Label: Overriding type: `true` (1:10 - 1:13)
   1 | type T = true & boolean;
     |          ^^^^ Overriding type: `true`
---

[TestNoRedundantTypeConstituentsRule/invalid-34 - 1]
Diagnostic 1: overrides (1:10 - 1:15)
Message: 'any' overrides all other types in this intersection type.
   1 | type T = number & any;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number & any;
     |          ^^^^^^ Redundant type: `number`
  Label: Overriding type: `any` (1:19 - 1:21)
   1 | type T = number & any;
     |                   ^^^ Overriding type: `any`
---

[TestNoRedundantTypeConstituentsRule/invalid-35 - 1]
Diagnostic 1: overrides (1:16 - 1:21)
Message: 'any' overrides all other types in this intersection type.
   1 | type T = any & number;
     |                ~~~~~~
  Label: Redundant type: `number` (1:16 - 1:21)
   1 | type T = any & number;
     |                ^^^^^^ Redundant type: `number`
  Label: Overriding type: `any` (1:10 - 1:12)
   1 | type T = any & number;
     |          ^^^ Overriding type: `any`
---

[TestNoRedundantTypeConstituentsRule/invalid-36 - 1]
Diagnostic 1: errorTypeOverrides (1:30 - 1:30)
Message: 'NotKnown' is an 'error' type that acts as 'any' and overrides all other types in this intersection type.
   1 | type ErrorTypes = NotKnown & 0;
     |                              ~
  Label: Redundant type: `0` (1:30 - 1:30)
   1 | type ErrorTypes = NotKnown & 0;
     |                              ^ Redundant type: `0`
  Label: Overriding type: `NotKnown` (1:19 - 1:26)
   1 | type ErrorTypes = NotKnown & 0;
     |                   ^^^^^^^^ Overriding type: `NotKnown`
---

[TestNoRedundantTypeConstituentsRule/invalid-37 - 1]
Diagnostic 1: overrides (1:10 - 1:15)
Message: 'never' overrides all other types in this intersection type.
   1 | type T = number & never;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number & never;
     |          ^^^^^^ Redundant type: `number`
  Label: Overriding type: `never` (1:19 - 1:23)
   1 | type T = number & never;
     |                   ^^^^^ Overriding type: `never`
---

[TestNoRedundantTypeConstituentsRule/invalid-38 - 1]
Diagnostic 1: overrides (3:22 - 3:27)
Message: 'never' overrides all other types in this intersection type.
   2 |         type B = never;
   3 |         type T = B & number;
     |                      ~~~~~~
   4 |       
  Label: Redundant type: `number` (3:22 - 3:27)
   2 |         type B = never;
   3 |         type T = B & number;
     |                      ^^^^^^ Redundant type: `number`
   4 |       
  Label: Overriding type: `never` (3:18 - 3:18)
   2 |         type B = never;
   3 |         type T = B & number;
     |                  ^ Overriding type: `never`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-39 - 1]
Diagnostic 1: overrides (1:18 - 1:23)
Message: 'never' overrides all other types in this intersection type.
   1 | type T = never & number;
     |                  ~~~~~~
  Label: Redundant type: `number` (1:18 - 1:23)
   1 | type T = never & number;
     |                  ^^^^^^ Redundant type: `number`
  Label: Overriding type: `never` (1:10 - 1:14)
   1 | type T = never & number;
     |          ^^^^^ Overriding type: `never`
---

[TestNoRedundantTypeConstituentsRule/invalid-40 - 1]
Diagnostic 1: overridden (1:19 - 1:25)
Message: 'unknown' is overridden by other types in this intersection type.
   1 | type T = number & unknown;
     |                   ~~~~~~~
  Label: Redundant type: `unknown` (1:19 - 1:25)
   1 | type T = number & unknown;
     |                   ^^^^^^^ Redundant type: `unknown`
  Label: Overriding type: `number` (1:10 - 1:15)
   1 | type T = number & unknown;
     |          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-41 - 1]
Diagnostic 1: overridden (1:10 - 1:16)
Message: 'unknown' is overridden by other types in this intersection type.
   1 | type T = unknown & number;
     |          ~~~~~~~
  Label: Redundant type: `unknown` (1:10 - 1:16)
   1 | type T = unknown & number;
     |          ^^^^^^^ Redundant type: `unknown`
  Label: Overriding type: `number` (1:20 - 1:25)
   1 | type T = unknown & number;
     |                    ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-42 - 1]
Diagnostic 1: primitiveOverridden (1:10 - 1:15)
Message: number is overridden by the 0 in this intersection type.
   1 | type T = number & 0;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number & 0;
     |          ^^^^^^ Redundant type: `number`
  Label: Overriding type: `0` (1:19 - 1:19)
   1 | type T = number & 0;
     |                   ^ Overriding type: `0`
---

[TestNoRedundantTypeConstituentsRule/invalid-43 - 1]
Diagnostic 1: primitiveOverridden (1:15 - 1:20)
Message: string is overridden by the  in this intersection type.
   1 | type T = '' & string;
     |               ~~~~~~
  Label: Redundant type: `string` (1:15 - 1:20)
   1 | type T = '' & string;
     |               ^^^^^^ Redundant type: `string`
  Label: Overriding type: `""` (1:10 - 1:11)
   1 | type T = '' & string;
     |          ^^ Overriding type: `""`
---

[TestNoRedundantTypeConstituentsRule/invalid-44 - 1]
Diagnostic 1: primitiveOverridden (3:22 - 3:27)
Message: bigint is overridden by the 0n in this intersection type.
   2 |         type B = 0n;
   3 |         type T = B & bigint;
     |                      ~~~~~~
   4 |       
  Label: Redundant type: `bigint` (3:22 - 3:27)
   2 |         type B = 0n;
   3 |         type T = B & bigint;
     |                      ^^^^^^ Redundant type: `bigint`
   4 |       
  Label: Overriding type: `0n` (3:18 - 3:18)
   2 |         type B = 0n;
   3 |         type T = B & bigint;
     |                  ^ Overriding type: `0n`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-45 - 1]
Diagnostic 1: primitiveOverridden (1:15 - 1:20)
Message: bigint is overridden by the 0n in this intersection type.
   1 | type T = 0n & bigint;
     |               ~~~~~~
  Label: Redundant type: `bigint` (1:15 - 1:20)
   1 | type T = 0n & bigint;
     |               ^^^^^^ Redundant type: `bigint`
  Label: Overriding type: `0n` (1:10 - 1:11)
   1 | type T = 0n & bigint;
     |          ^^ Overriding type: `0n`
---

[TestNoRedundantTypeConstituentsRule/invalid-46 - 1]
Diagnostic 1: primitiveOverridden (1:16 - 1:21)
Message: bigint is overridden by the -1n in this intersection type.
   1 | type T = -1n & bigint;
     |                ~~~~~~
  Label: Redundant type: `bigint` (1:16 - 1:21)
   1 | type T = -1n & bigint;
     |                ^^^^^^ Redundant type: `bigint`
  Label: Overriding type: `-1n` (1:10 - 1:12)
   1 | type T = -1n & bigint;
     |          ^^^ Overriding type: `-1n`
---

[TestNoRedundantTypeConstituentsRule/invalid-47 - 1]
Diagnostic 1: primitiveOverridden (3:22 - 3:27)
Message: string is overridden by the "\"a\"" | "\"b\"" in this intersection type.
   2 |         type T = 'a' | 'b';
   3 |         type U = T & string;
     |                      ~~~~~~
   4 |       
  Label: Redundant type: `string` (3:22 - 3:27)
   2 |         type T = 'a' | 'b';
   3 |         type U = T & string;
     |                      ^^^^^^ Redundant type: `string`
   4 |       
  Label: Overriding type: `"a" | "b"` (3:18 - 3:18)
   2 |         type T = 'a' | 'b';
   3 |         type U = T & string;
     |                  ^ Overriding type: `"a" | "b"`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-48 - 1]
Diagnostic 1: primitiveOverridden (4:35 - 4:40)
Message: number is overridden by the 1 | 2 in this intersection type.
   3 |         type T = 'a' | 'b';
   4 |         type U = S & T & string & number;
     |                                   ~~~~~~
   5 |       
  Label: Redundant type: `number` (4:35 - 4:40)
   3 |         type T = 'a' | 'b';
   4 |         type U = S & T & string & number;
     |                                   ^^^^^^ Redundant type: `number`
   5 |       
  Label: Overriding type: `1 | 2` (4:18 - 4:18)
   3 |         type T = 'a' | 'b';
   4 |         type U = S & T & string & number;
     |                  ^ Overriding type: `1 | 2`
   5 |       

Diagnostic 2: primitiveOverridden (4:26 - 4:31)
Message: string is overridden by the "\"a\"" | "\"b\"" in this intersection type.
   3 |         type T = 'a' | 'b';
   4 |         type U = S & T & string & number;
     |                          ~~~~~~
   5 |       
  Label: Redundant type: `string` (4:26 - 4:31)
   3 |         type T = 'a' | 'b';
   4 |         type U = S & T & string & number;
     |                          ^^^^^^ Redundant type: `string`
   5 |       
  Label: Overriding type: `"a" | "b"` (4:22 - 4:22)
   3 |         type T = 'a' | 'b';
   4 |         type U = S & T & string & number;
     |                      ^ Overriding type: `"a" | "b"`
   5 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-49 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:22)
Message: 2 is overridden by number in this union type.
   1 | type T = (2 | 'other') | number;
     |          ~~~~~~~~~~~~~
  Label: Redundant type: `2` (1:11 - 1:11)
   1 | type T = (2 | 'other') | number;
     |           ^ Redundant type: `2`
  Label: Overriding type: `number` (1:26 - 1:31)
   1 | type T = (2 | 'other') | number;
     |                          ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-50 - 1]
Diagnostic 1: primitiveOverridden (1:18 - 1:23)
Message: number is overridden by the 0 | 1 in this intersection type.
   1 | type T = 0 & 1 & number;
     |                  ~~~~~~
  Label: Redundant type: `number` (1:18 - 1:23)
   1 | type T = 0 & 1 & number;
     |                  ^^^^^^ Redundant type: `number`
  Label: Overriding type: `0` (1:10 - 1:10)
   1 | type T = 0 & 1 & number;
     |          ^ Overriding type: `0`
  Label: Overriding type: `1` (1:14 - 1:14)
   1 | type T = 0 & 1 & number;
     |              ^ Overriding type: `1`
---

[TestNoRedundantTypeConstituentsRule/invalid-51 - 1]
Diagnostic 1: overrides (1:10 - 1:15)
Message: 'any' overrides all other types in this union type.
   1 | type T = number | string | any;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number | string | any;
     |          ^^^^^^ Redundant type: `number`
  Label: Redundant type: `string` (1:19 - 1:24)
   1 | type T = number | string | any;
     |                   ^^^^^^ Redundant type: `string`
  Label: Overriding type: `any` (1:28 - 1:30)
   1 | type T = number | string | any;
     |                            ^^^ Overriding type: `any`
---

[TestNoRedundantTypeConstituentsRule/invalid-52 - 1]
Diagnostic 1: overridden (1:28 - 1:32)
Message: 'never' is overridden by other types in this union type.
   1 | type T = number | string | never;
     |                            ~~~~~
  Label: Redundant type: `never` (1:28 - 1:32)
   1 | type T = number | string | never;
     |                            ^^^^^ Redundant type: `never`
  Label: Overriding type: `number` (1:10 - 1:15)
   1 | type T = number | string | never;
     |          ^^^^^^ Overriding type: `number`
  Label: Overriding type: `string` (1:19 - 1:24)
   1 | type T = number | string | never;
     |                   ^^^^^^ Overriding type: `string`
---

[TestNoRedundantTypeConstituentsRule/invalid-53 - 1]
Diagnostic 1: overrides (1:10 - 1:15)
Message: 'never' overrides all other types in this intersection type.
   1 | type T = number & string & never;
     |          ~~~~~~
  Label: Redundant type: `number` (1:10 - 1:15)
   1 | type T = number & string & never;
     |          ^^^^^^ Redundant type: `number`
  Label: Redundant type: `string` (1:19 - 1:24)
   1 | type T = number & string & never;
     |                   ^^^^^^ Redundant type: `string`
  Label: Overriding type: `never` (1:28 - 1:32)
   1 | type T = number & string & never;
     |                            ^^^^^ Overriding type: `never`
---

[TestNoRedundantTypeConstituentsRule/invalid-54 - 1]
Diagnostic 1: overridden (1:28 - 1:34)
Message: 'unknown' is overridden by other types in this intersection type.
   1 | type T = number & string & unknown;
     |                            ~~~~~~~
  Label: Redundant type: `unknown` (1:28 - 1:34)
   1 | type T = number & string & unknown;
     |                            ^^^^^^^ Redundant type: `unknown`
  Label: Overriding type: `number` (1:10 - 1:15)
   1 | type T = number & string & unknown;
     |          ^^^^^^ Overriding type: `number`
  Label: Overriding type: `string` (1:19 - 1:24)
   1 | type T = number & string & unknown;
     |                   ^^^^^^ Overriding type: `string`
---

[TestNoRedundantTypeConstituentsRule/invalid-55 - 1]
Diagnostic 1: overrides (1:27 - 1:32)
Message: 'any' overrides all other types in this union type.
   1 | type T = (number | any) | string;
     |                           ~~~~~~
  Label: Redundant type: `string` (1:27 - 1:32)
   1 | type T = (number | any) | string;
     |                           ^^^^^^ Redundant type: `string`
  Label: Overriding type: `any` (1:20 - 1:22)
   1 | type T = (number | any) | string;
     |                    ^^^ Overriding type: `any`

Diagnostic 2: overrides (1:11 - 1:16)
Message: 'any' overrides all other types in this union type.
   1 | type T = (number | any) | string;
     |           ~~~~~~
  Label: Redundant type: `number` (1:11 - 1:16)
   1 | type T = (number | any) | string;
     |           ^^^^^^ Redundant type: `number`
  Label: Overriding type: `any` (1:20 - 1:22)
   1 | type T = (number | any) | string;
     |                    ^^^ Overriding type: `any`
---

[TestNoRedundantTypeConstituentsRule/invalid-56 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:23)
Message: -1 is overridden by number in this union type.
   1 | type T = (-1 | 'other') | number;
     |          ~~~~~~~~~~~~~~
  Label: Redundant type: `-1` (1:11 - 1:12)
   1 | type T = (-1 | 'other') | number;
     |           ^^ Redundant type: `-1`
  Label: Overriding type: `number` (1:27 - 1:32)
   1 | type T = (-1 | 'other') | number;
     |                           ^^^^^^ Overriding type: `number`
---

[TestNoRedundantTypeConstituentsRule/invalid-57 - 1]
Diagnostic 1: literalOverridden (3:18 - 3:24)
Message: 2 | 0 is overridden by number in this union type.
   2 |         type B = 0 | 'other';
   3 |         type T = (2 | B) | number;
     |                  ~~~~~~~
   4 |       
  Label: Redundant type: `2` (3:19 - 3:19)
   2 |         type B = 0 | 'other';
   3 |         type T = (2 | B) | number;
     |                   ^ Redundant type: `2`
   4 |       
  Label: Redundant type: `0` (3:23 - 3:23)
   2 |         type B = 0 | 'other';
   3 |         type T = (2 | B) | number;
     |                       ^ Redundant type: `0`
   4 |       
  Label: Overriding type: `number` (3:28 - 3:33)
   2 |         type B = 0 | 'other';
   3 |         type T = (2 | B) | number;
     |                            ^^^^^^ Overriding type: `number`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-58 - 1]
Diagnostic 1: primitiveOverridden (3:28 - 3:33)
Message: number is overridden by the 0 | 1 in this intersection type.
   2 |         type N = number;
   3 |         type T = (0 | 1) & number & N;
     |                            ~~~~~~
   4 |       
  Label: Redundant type: `number` (3:28 - 3:33)
   2 |         type N = number;
   3 |         type T = (0 | 1) & number & N;
     |                            ^^^^^^ Redundant type: `number`
   4 |       
  Label: Redundant type: `number` (3:37 - 3:37)
   2 |         type N = number;
   3 |         type T = (0 | 1) & number & N;
     |                                     ^ Redundant type: `number`
   4 |       
  Label: Overriding type: `0 | 1` (3:18 - 3:24)
   2 |         type N = number;
   3 |         type T = (0 | 1) & number & N;
     |                  ^^^^^^^ Overriding type: `0 | 1`
   4 |       
---

[TestNoRedundantTypeConstituentsRule/invalid-59 - 1]
Diagnostic 1: literalOverridden (1:10 - 1:10)
Message: 0 is overridden by number in this union type.
   1 | type T = 0 | (number | string);
     |          ~
  Label: Redundant type: `0` (1:10 - 1:10)
   1 | type T = 0 | (number | string);
     |          ^ Redundant type: `0`
  Label: Overriding type: `number` (1:15 - 1:20)
   1 | type T = 0 | (number | string);
     |               ^^^^^^ Overriding type: `number`
---
